Refactor(.src) : 리마인드 불러오기 서비스 코드 수정